--- a/channel-add.html
+++ b/channel-add.html
@@ -75,7 +75,7 @@ Add your 9x9.tv creations and activity to your facebook timeline
 </div>
 </div>
 
-<!--============================== content-main start ========================-->
+<!--============================== content-wrap start ========================-->
 <div id="content-wrap" class="channel-add">
 <div id="content-nav">
 &nbsp;
@@ -85,7 +85,7 @@ Add your 9x9.tv creations and activity to your facebook timeline
 <!-- template = #content-main-tmpl -->
 </div>
 </div>
-<!--============================== content-main start ========================-->
+<!--============================== content-wrap close ========================-->
 
 <script id="content-main-tmpl" type="text/x-jquery-tmpl">
 <div id="title-func" class="clearfix">
