--- a/channel-setting.html
+++ b/channel-setting.html
@@ -75,7 +75,7 @@ Add your 9x9.tv creations and activity to your facebook timeline
 </div>
 </div>
 
-<!--============================== content-main start ========================-->
+<!--============================== content-wrap start ========================-->
 <div id="content-wrap" class="channel-setting">
 <div id="content-nav">
 <div id="func-nav">
@@ -90,11 +90,11 @@ Add your 9x9.tv creations and activity to your facebook timeline
 <!-- template = #content-main-tmpl -->
 </div>
 </div>
-<!--============================== content-main start ========================-->
+<!--============================== content-wrap close ========================-->
 
 <script id="content-main-tmpl" type="text/x-jquery-tmpl">
 <div id="title-func" class="clearfix">
-<h2><span id="channel-name" data-meta="${name}">${name}</span><span class="title-crumb">&gt; ${nn._([CMS_CONF.PAGE_ID, 'title-func', 'Settings'])}</span></h2>
+<h2><span id="channel-name" data-meta="${name}" data-width="">${name}</span><span class="title-crumb">&gt; ${nn._([CMS_CONF.PAGE_ID, 'title-func', 'Settings'])}</span></h2>
 <p class="required"><acronym title="Required field" class="mark-required">*</acronym>${nn._([CMS_CONF.PAGE_ID, 'title-func', 'Required field'])}</p>
 </div>
 <div id="content-main-wrap">
